--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,14 @@
 
     <TextView
             android:text="@string/hello_world"
+            android:id="@+id/txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt"
+        android:text="@string/button_tip"/>
 
 </RelativeLayout>
